# llm-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.yaml  eval_prompts.yaml  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.claude/agents/: code-quality.md
.claude/commands/: lint-fast.md
.continue/rules/: python-coding-styles-google.md  solid-rules.md
.github/: dependabot.yml
.github/workflows/: gemini-cli.yml  gemini-issue-automated-triage.yml  gemini-issue-scheduled-triage.yml  gemini-pr-review.yml  release.yml
.makefiles/: lint.mk  requirements.mk  test.mk  uv.mk
.streamlit/: config.toml
chatbot/: app.py  chat.py  cli.py  config.py  constants.py  rag.py  resources.py  settings.py  types.py  ui.py  web_context.py
chatbot/reasoning/: __init__.py  classifier.py  graph_orchestrator.py  orchestrator.py  templates.py
chatbot/search/: __init__.py  brave.py  google.py  manager.py
chatbot/utils/: chat.py  ui.py  web.py
chatbot/web/: context.py  http.py
chatbot/web/search/: __init__.py  base.py  brave.py  google.py  manager.py
docs/adr/: 001-initial-architecture-decision.md  001-web-url-fetch-reliability-improvements.md  002-rag-system-architecture.md  002-web-context-independence.md  003-adaptive-document-parsing-strategy.md  003-cross-source-reranking-system.md  004-automated-context-quality-evaluation.md  004-url-processing-architecture.md  005-automated-context-quality-evaluation.md  006-web-context-independence.md  007-cross-source-reranking-system.md  008-multi-step-reasoning-architecture.md
docs/proposals/: context_retrieval_pipelines.md  web_search_rag_integration.md
docs/published/: medium-article-web-reliability.md
scripts/: README.md  compare_retrieval_modes.py  evaluate_web_lookup.py  test_urls.json
src/chatbot/: app.py  chat.py  cli.py  config.py  ui.py
tests/: conftest.py
tests/integration/: test_app_lifecycle.py  test_rag_integration.py
tests/unit/: test_chat.py  test_constants.py  test_rag.py  test_settings.py  test_web.py  utils.py
tests/unit/web/search/: __init__.py  conftest.py  test_base.py
